[bdist_wheel]
universal = 1

[build_sphinx]
project = 'nem2'
version = 0.0.1
release = 0.0.1
warning-is-error = 1
pdb = 1

[metadata]
license_file = LICENSE

[flake8]
ignore = E124, E128, E221, E241, E501, E731, E741, F403, F405, W605
exclude = .git, .eggs, __pycache__, doc/conf.py, build, dist, .mypy_cache, *.egg-info, .tox
